--- a/ar/findword.html
+++ b/ar/findword.html
@@ -242,6 +242,50 @@
     </header>
     
     <main>
+	    <div class="flag-grid">
+    <a href="https://englishtests.online/bn/findword" class="flag-link">
+        <img src="flags/bangladesh.svg" alt="Bengali" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/pt-br/findword" class="flag-link">
+        <img src="flags/brazil.png" alt="Portuguese" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/zh-CN/findword" class="flag-link">
+        <img src="flags/china.svg" alt="Chinese" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/ar/findword" class="flag-link">
+        <img src="flags/egypt.png" alt="Arabic" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/fr/findword" class="flag-link">
+        <img src="flags/france.svg" alt="French" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/de/findword" class="flag-link">
+        <img src="flags/germany.svg" alt="German" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/hi/findword" class="flag-link">
+        <img src="flags/india.png" alt="Hindi" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/id/findword" class="flag-link">
+        <img src="flags/indonesia.svg" alt="Indonesian" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/ja/findword" class="flag-link">
+        <img src="flags/japan.svg" alt="Japanese" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/tl/findword" class="flag-link">
+        <img src="flags/philippines.svg" alt="Filipino" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/ko/findword" class="flag-link">
+        <img src="flags/south-korea.svg" alt="Korean" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/es/findword" class="flag-link">
+        <img src="flags/spain.png" alt="Spanish" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/tr/findword" class="flag-link">
+        <img src="flags/turkey.svg" alt="Turkish" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/vi/findword" class="flag-link">
+        <img src="flags/vietnam.svg" alt="Vietnamese" class="flag-icon">
+    </a>
+</div>
         <section class="section" id="welcome">
             <p>FindWord هي لعبة ألغاز يومية تتحداك لاكتشاف الكلمات الإنجليزية المخفية داخل شبكة مكونة من 144 حرفًا تم إنشاؤها عشوائيًا. يتلقى جميع اللاعبين حول العالم نفس الشبكة يوميًا، مما يجعلها مثالية للتنافس الودي مع العائلة والأصدقاء. فكر في FindWord كبحث عن كنز، حيث تكتشف الكلمات كما لو كنت تستخرج قطع الذهب من الخام. يمكن أن يساعدك اللعب المنتظم في الحفاظ على حدة ذاكرتك مع مرور الوقت، خاصة عند دمجه مع النشاط البدني.</p>
             
