--- a/fr/findword.html
+++ b/fr/findword.html
@@ -239,6 +239,50 @@
     </header>
     
     <main>
+	    <div class="flag-grid">
+    <a href="https://englishtests.online/bn/findword" class="flag-link">
+        <img src="flags/bangladesh.svg" alt="Bengali" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/pt-br/findword" class="flag-link">
+        <img src="flags/brazil.png" alt="Portuguese" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/zh-CN/findword" class="flag-link">
+        <img src="flags/china.svg" alt="Chinese" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/ar/findword" class="flag-link">
+        <img src="flags/egypt.png" alt="Arabic" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/fr/findword" class="flag-link">
+        <img src="flags/france.svg" alt="French" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/de/findword" class="flag-link">
+        <img src="flags/germany.svg" alt="German" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/hi/findword" class="flag-link">
+        <img src="flags/india.png" alt="Hindi" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/id/findword" class="flag-link">
+        <img src="flags/indonesia.svg" alt="Indonesian" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/ja/findword" class="flag-link">
+        <img src="flags/japan.svg" alt="Japanese" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/tl/findword" class="flag-link">
+        <img src="flags/philippines.svg" alt="Filipino" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/ko/findword" class="flag-link">
+        <img src="flags/south-korea.svg" alt="Korean" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/es/findword" class="flag-link">
+        <img src="flags/spain.png" alt="Spanish" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/tr/findword" class="flag-link">
+        <img src="flags/turkey.svg" alt="Turkish" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/vi/findword" class="flag-link">
+        <img src="flags/vietnam.svg" alt="Vietnamese" class="flag-icon">
+    </a>
+</div>
         <section class="section" id="welcome">
             <p>FindWord est un jeu de puzzle quotidien qui vous met au défi de découvrir des mots anglais cachés dans une grille de 144 lettres générées aléatoirement. Chaque jour, tous les joueurs du monde entier reçoivent la même grille, ce qui en fait une excellente occasion de compétition amicale avec votre famille et vos amis. Imaginez FindWord comme une chasse au trésor où vous extrayez des mots, tels des pépites d'or enfouies dans un filon. Jouer régulièrement vous procure non seulement du divertissement, mais peut également contribuer à maintenir votre acuité mentale au fil du temps.</p>
             
