--- a/ko/findword.html
+++ b/ko/findword.html
@@ -239,6 +239,50 @@
     </header>
     
     <main>
+	    <div class="flag-grid">
+    <a href="https://englishtests.online/bn/findword" class="flag-link">
+        <img src="flags/bangladesh.svg" alt="Bengali" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/pt-br/findword" class="flag-link">
+        <img src="flags/brazil.png" alt="Portuguese" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/zh-CN/findword" class="flag-link">
+        <img src="flags/china.svg" alt="Chinese" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/ar/findword" class="flag-link">
+        <img src="flags/egypt.png" alt="Arabic" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/fr/findword" class="flag-link">
+        <img src="flags/france.svg" alt="French" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/de/findword" class="flag-link">
+        <img src="flags/germany.svg" alt="German" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/hi/findword" class="flag-link">
+        <img src="flags/india.png" alt="Hindi" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/id/findword" class="flag-link">
+        <img src="flags/indonesia.svg" alt="Indonesian" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/ja/findword" class="flag-link">
+        <img src="flags/japan.svg" alt="Japanese" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/tl/findword" class="flag-link">
+        <img src="flags/philippines.svg" alt="Filipino" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/ko/findword" class="flag-link">
+        <img src="flags/south-korea.svg" alt="Korean" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/es/findword" class="flag-link">
+        <img src="flags/spain.png" alt="Spanish" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/tr/findword" class="flag-link">
+        <img src="flags/turkey.svg" alt="Turkish" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/vi/findword" class="flag-link">
+        <img src="flags/vietnam.svg" alt="Vietnamese" class="flag-icon">
+    </a>
+</div>
         <section class="section" id="welcome">
             <p>FindWord는 144개의 무작위 문자 속에서 영어 단어를 찾아내는 퍼즐 게임입니다. 매일 전 세계 모든 플레이어가 동일한 문자 배열을 받으며, 가족 및 친구들과 함께 즐기기에 안성맞춤입니다. 마치 보물을 찾는 것처럼 단어를 발굴하는 재미를 느껴보세요! 꾸준히 플레이하면 어휘력이 향상될 뿐만 아니라 두뇌 건강에도 도움이 됩니다.</p>
             
