--- a/tl/findword.html
+++ b/tl/findword.html
@@ -239,6 +239,50 @@
     </header>
     
     <main>
+	    <div class="flag-grid">
+    <a href="https://englishtests.online/bn/findword" class="flag-link">
+        <img src="flags/bangladesh.svg" alt="Bengali" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/pt-br/findword" class="flag-link">
+        <img src="flags/brazil.png" alt="Portuguese" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/zh-CN/findword" class="flag-link">
+        <img src="flags/china.svg" alt="Chinese" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/ar/findword" class="flag-link">
+        <img src="flags/egypt.png" alt="Arabic" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/fr/findword" class="flag-link">
+        <img src="flags/france.svg" alt="French" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/de/findword" class="flag-link">
+        <img src="flags/germany.svg" alt="German" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/hi/findword" class="flag-link">
+        <img src="flags/india.png" alt="Hindi" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/id/findword" class="flag-link">
+        <img src="flags/indonesia.svg" alt="Indonesian" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/ja/findword" class="flag-link">
+        <img src="flags/japan.svg" alt="Japanese" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/tl/findword" class="flag-link">
+        <img src="flags/philippines.svg" alt="Filipino" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/ko/findword" class="flag-link">
+        <img src="flags/south-korea.svg" alt="Korean" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/es/findword" class="flag-link">
+        <img src="flags/spain.png" alt="Spanish" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/tr/findword" class="flag-link">
+        <img src="flags/turkey.svg" alt="Turkish" class="flag-icon">
+    </a>
+    <a href="https://englishtests.online/vi/findword" class="flag-link">
+        <img src="flags/vietnam.svg" alt="Vietnamese" class="flag-icon">
+    </a>
+</div>
         <section class="section" id="welcome">
             <p>Ang FindWord ay isang pang-araw-araw na palaisipan na magpapalabas ng iyong husay sa paghahanap ng mga salitang Ingles sa isang grid na may 144 na random na letra. Araw-araw, lahat ng manlalaro sa buong mundo ay makakatanggap ng parehong grid ng letra, kaya't perpekto ito para sa isang paligsahan kasama ang pamilya at mga kaibigan. Isipin ang FindWord bilang isang pangangaso ng kayamanan kung saan ang mga salita ay parang gintong nakatago sa bato. Bukod sa kasiyahan, maaaring makatulong ang regular na paglalaro upang mapanatili ang iyong katalinuhan sa paglipas ng panahon.</p>
             
