--- a/findword.html
+++ b/findword.html
@@ -17,6 +17,24 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://englishtests.online/findword">
 
+    <link rel="alternate" hreflang="en" href="https://englishtests.online/findword" />
+    <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/findword" />
+    <link rel="alternate" hreflang="hi" href="https://englishtests.online/hi/findword" />
+    <link rel="alternate" hreflang="es" href="https://englishtests.online/es/findword" />
+    <link rel="alternate" hreflang="fr" href="https://englishtests.online/fr/findword" />
+    <link rel="alternate" hreflang="ar" href="https://englishtests.online/ar/findword" />
+    <link rel="alternate" hreflang="bn" href="https://englishtests.online/bn/findword" />
+    <link rel="alternate" hreflang="pt-br" href="https://englishtests.online/pt-br/findword" />
+    <link rel="alternate" hreflang="id" href="https://englishtests.online/id/findword" />
+    <link rel="alternate" hreflang="de" href="https://englishtests.online/de/findword" />
+    <link rel="alternate" hreflang="ja" href="https://englishtests.online/ja/findword" />
+    <link rel="alternate" hreflang="tr" href="https://englishtests.online/tr/findword" />
+    <link rel="alternate" hreflang="vi" href="https://englishtests.online/vi/findword" />
+    <link rel="alternate" hreflang="tl" href="https://englishtests.online/tl/findword" />
+    <link rel="alternate" hreflang="ko" href="https://englishtests.online/ko/findword" />
+    <link rel="alternate" hreflang="x-default" href="https://englishtests.online/findword" />
+
+
 	<!-- Google Analytics (GA4) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2TNG0KVK8"></script>
     <script>
