--- a/learn-english-effectively.html
+++ b/learn-english-effectively.html
@@ -240,46 +240,46 @@
     
     <main>
         <div class="flag-grid">
-    <a href="https://englishtests.online/bn/findword" class="flag-link">
+    <a href="https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay" class="flag-link">
         <img src="flags/bangladesh.svg" title="বাংলা" alt="Bengali" class="flag-icon">
     </a>
-    <a href="https://englishtests.online/pt-br/findword" class="flag-link">
+    <a href="https://englishtests.online/pt-br/aprender-ingles-com-eficiencia" class="flag-link">
         <img src="flags/brazil.png" title="Português" alt="Portuguese" class="flag-icon">
     </a>
-    <a href="https://englishtests.online/zh-CN/findword" class="flag-link">
+    <a href="https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv" class="flag-link">
         <img src="flags/china.svg" title="中文" alt="Chinese" class="flag-icon">
     </a>
-    <a href="https://englishtests.online/ar/findword" class="flag-link">
+    <a href="https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa" class="flag-link">
         <img src="flags/egypt.png" title="العربية" alt="Arabic" class="flag-icon">
     </a>
-    <a href="https://englishtests.online/fr/findword" class="flag-link">
+    <a href="https://englishtests.online/fr/apprendre-anglais-efficacement" class="flag-link">
         <img src="flags/france.svg" title="Français" alt="French" class="flag-icon">
     </a>
-    <a href="https://englishtests.online/de/findword" class="flag-link">
+    <a href="https://englishtests.online/de/englisch-effektiv-lernen" class="flag-link">
         <img src="flags/germany.svg" title="Deutsch" alt="German" class="flag-icon">
     </a>
-    <a href="https://englishtests.online/hi/findword" class="flag-link">
+    <a href="https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike" class="flag-link">
         <img src="flags/india.png" title="हिन्दी" alt="Hindi" class="flag-icon">
     </a>
-    <a href="https://englishtests.online/id/findword" class="flag-link">
+    <a href="https://englishtests.online/id/belajar-bahasa-inggris-efektif" class="flag-link">
         <img src="flags/indonesia.svg" title="Bahasa Indonesia" alt="Indonesian" class="flag-icon">
     </a>
-    <a href="https://englishtests.online/ja/findword" class="flag-link">
+    <a href="https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu" class="flag-link">
         <img src="flags/japan.svg" title="日本語" alt="Japanese" class="flag-icon">
     </a>
-    <a href="https://englishtests.online/tl/findword" class="flag-link">
+    <a href="https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles" class="flag-link">
         <img src="flags/philippines.svg" title="Filipino" alt="Filipino" class="flag-icon">
     </a>
-    <a href="https://englishtests.online/ko/findword" class="flag-link">
+    <a href="https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn" class="flag-link">
         <img src="flags/south-korea.svg" title="한국어" alt="Korean" class="flag-icon">
     </a>
-    <a href="https://englishtests.online/es/findword" class="flag-link">
+    <a href="https://englishtests.online/es/aprender-ingles-eficientemente" class="flag-link">
         <img src="flags/spain.png" title="Español" alt="Spanish" class="flag-icon">
     </a>
-    <a href="https://englishtests.online/tr/findword" class="flag-link">
+    <a href="https://englishtests.online/tr/ingilizce-etkili-ogrenme" class="flag-link">
         <img src="flags/turkey.svg" title="Türkçe" alt="Turkish" class="flag-icon">
     </a>
-    <a href="https://englishtests.online/vi/findword" class="flag-link">
+    <a href="https://englishtests.online/vi/hoc-tieng-anh-hieu-qua" class="flag-link">
         <img src="flags/vietnam.svg" title="Tiếng Việt" alt="Vietnamese" class="flag-icon">
     </a>
 </div>
