--- a/ar/findword.html
+++ b/ar/findword.html
@@ -261,46 +261,46 @@
     <main>
 	    <div class="flag-grid">
     <a href="https://englishtests.online/bn/findword" class="flag-link">
-        <img src="flags/bangladesh.svg" title="বাংলা" alt="Bengali" class="flag-icon">
+        <img src="https://englishtests.online/flags/bangladesh.svg" title="বাংলা" alt="Bengali" class="flag-icon">
     </a>
     <a href="https://englishtests.online/pt-br/findword" class="flag-link">
-        <img src="flags/brazil.png" title="Português" alt="Portuguese" class="flag-icon">
+        <img src="https://englishtests.online/flags/brazil.png" title="Português" alt="Portuguese" class="flag-icon">
     </a>
     <a href="https://englishtests.online/zh-CN/findword" class="flag-link">
-        <img src="flags/china.svg" title="中文" alt="Chinese" class="flag-icon">
+        <img src="https://englishtests.online/flags/china.svg" title="中文" alt="Chinese" class="flag-icon">
     </a>
     <a href="https://englishtests.online/ar/findword" class="flag-link">
-        <img src="flags/egypt.png" title="العربية" alt="Arabic" class="flag-icon">
+        <img src="https://englishtests.online/flags/egypt.png" title="العربية" alt="Arabic" class="flag-icon">
     </a>
     <a href="https://englishtests.online/fr/findword" class="flag-link">
-        <img src="flags/france.svg" title="Français" alt="French" class="flag-icon">
+        <img src="https://englishtests.online/flags/france.svg" title="Français" alt="French" class="flag-icon">
     </a>
     <a href="https://englishtests.online/de/findword" class="flag-link">
-        <img src="flags/germany.svg" title="Deutsch" alt="German" class="flag-icon">
+        <img src="https://englishtests.online/flags/germany.svg" title="Deutsch" alt="German" class="flag-icon">
     </a>
     <a href="https://englishtests.online/hi/findword" class="flag-link">
-        <img src="flags/india.png" title="हिन्दी" alt="Hindi" class="flag-icon">
+        <img src="https://englishtests.online/flags/india.png" title="हिन्दी" alt="Hindi" class="flag-icon">
     </a>
     <a href="https://englishtests.online/id/findword" class="flag-link">
-        <img src="flags/indonesia.svg" title="Bahasa Indonesia" alt="Indonesian" class="flag-icon">
+        <img src="https://englishtests.online/flags/indonesia.svg" title="Bahasa Indonesia" alt="Indonesian" class="flag-icon">
     </a>
     <a href="https://englishtests.online/ja/findword" class="flag-link">
-        <img src="flags/japan.svg" title="日本語" alt="Japanese" class="flag-icon">
+        <img src="https://englishtests.online/flags/japan.svg" title="日本語" alt="Japanese" class="flag-icon">
     </a>
     <a href="https://englishtests.online/tl/findword" class="flag-link">
-        <img src="flags/philippines.svg" title="Filipino" alt="Filipino" class="flag-icon">
+        <img src="https://englishtests.online/flags/philippines.svg" title="Filipino" alt="Filipino" class="flag-icon">
     </a>
     <a href="https://englishtests.online/ko/findword" class="flag-link">
-        <img src="flags/south-korea.svg" title="한국어" alt="Korean" class="flag-icon">
+        <img src="https://englishtests.online/flags/south-korea.svg" title="한국어" alt="Korean" class="flag-icon">
     </a>
     <a href="https://englishtests.online/es/findword" class="flag-link">
-        <img src="flags/spain.png" title="Español" alt="Spanish" class="flag-icon">
+        <img src="https://englishtests.online/flags/spain.png" title="Español" alt="Spanish" class="flag-icon">
     </a>
     <a href="https://englishtests.online/tr/findword" class="flag-link">
-        <img src="flags/turkey.svg" title="Türkçe" alt="Turkish" class="flag-icon">
+        <img src="https://englishtests.online/flags/turkey.svg" title="Türkçe" alt="Turkish" class="flag-icon">
     </a>
     <a href="https://englishtests.online/vi/findword" class="flag-link">
-        <img src="flags/vietnam.svg" title="Tiếng Việt" alt="Vietnamese" class="flag-icon">
+        <img src="https://englishtests.online/flags/vietnam.svg" title="Tiếng Việt" alt="Vietnamese" class="flag-icon">
     </a>
 </div>
         <section class="section" id="welcome">
