--- a/de/englisch-effektiv-lernen.html
+++ b/de/englisch-effektiv-lernen.html
@@ -271,7 +271,7 @@
         <img src="https://englishtests.online/flags/philippines.svg" title="Filipino" alt="Filipino" class="flag-icon">
     </a>
     <a href="https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn" class="flag-link">
-        <img src="flags/south-korea.svg" title="한국어" alt="Korean" class="flag-icon">
+        <img src="https://englishtests.online/flags/south-korea.svg" title="한국어" alt="Korean" class="flag-icon">
     </a>
     <a href="https://englishtests.online/es/aprender-ingles-eficientemente" class="flag-link">
         <img src="https://englishtests.online/flags/spain.png" title="Español" alt="Spanish" class="flag-icon">
