--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://englishtests.online/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://englishtests.online/favicon-32x32.png">
+    <link rel="icon" type="image/svg+xml" href="https://englishtests.online/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://englishtests.online/favicon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://englishtests.online/favicon-192x192.png">
     
     <title>Free English tests online | Free Tests for All Levels A1-C2</title>
     <meta name="description" content="Test your English proficiency with hundreds of free online tests covering all CEFR levels from A1 to C2. Improve your grammar, vocabulary, and reading skills.">
