--- a/b1-english-tests.html
+++ b/b1-english-tests.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://englishtests.online/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://englishtests.online/favicon-32x32.png">
+    <link rel="icon" type="image/svg+xml" href="https://englishtests.online/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://englishtests.online/favicon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://englishtests.online/favicon-192x192.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free B1 Intermediate English Tests | Free Practice for Everyday English</title>
     <meta name="description" content="Intermediate English practice with free B1 level tests. Improve your ability to discuss familiar topics, express opinions, and understand main points of clear texts.">
