--- a/c2-english-tests.html
+++ b/c2-english-tests.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://englishtests.online/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://englishtests.online/favicon-32x32.png">
+    <link rel="icon" type="image/svg+xml" href="https://englishtests.online/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://englishtests.online/favicon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://englishtests.online/favicon-192x192.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free C2 Proficiency English Tests | Free Practice for Mastery-Level English</title>
     <meta name="description" content="Master proficiency-level English with free C2 tests. Perfect your understanding of nuanced expressions, idioms, and complex grammatical structures.">
