--- a/ko/findword.html
+++ b/ko/findword.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FindWord | 매일 즐기는 단어 퍼즐 게임 | englishtests.online</title>
-    
+    <link rel="icon" type="image/png" sizes="16x16" href="https://englishtests.online/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://englishtests.online/favicon-32x32.png">
+    <link rel="icon" type="image/svg+xml" href="https://englishtests.online/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://englishtests.online/favicon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://englishtests.online/favicon-192x192.png">
     <!-- Meta Description - Keep between 150-160 characters -->
     <meta name="description" content="FindWord는 매일 새로운 단어 퍼즐을 제공하는 게임입니다. 144개의 무작위 문자 속에서 3~7글자의 영어 단어를 찾아보세요. 어휘력과 단어 실력을 향상하세요.">
     
