--- a/vi/findword.html
+++ b/vi/findword.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FindWord | Trò chơi ô chữ hằng ngày | englishtests.online</title>
-    
+    <link rel="icon" type="image/png" sizes="16x16" href="https://englishtests.online/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://englishtests.online/favicon-32x32.png">
+    <link rel="icon" type="image/svg+xml" href="https://englishtests.online/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://englishtests.online/favicon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://englishtests.online/favicon-192x192.png">
     <!-- Meta Description - Keep between 150-160 characters -->
     <meta name="description" content="Thử thách bản thân với FindWord, trò chơi ô chữ hằng ngày với 144 chữ cái ngẫu nhiên. Tìm từ tiếng Anh từ 3-7 chữ cái và nâng cao vốn từ vựng cùng kỹ năng ngôn ngữ của bạn.">
     
