--- a/index.html
+++ b/index.html
@@ -602,6 +602,11 @@
                 if (levelTestButton) {
                     // Update the button text to show the user's level
                     levelTestButton.textContent = `Your English level is ${userLevel}`;
+
+                    // You might want to style it differently to make it stand out
+                    levelTestButton.style.backgroundColor = 'white';
+                    levelTestButton.style.border = '4px solid #3498db';
+                    levelTestButton.style.color = '#3498db';
                 }
             }
         }
