--- a/test-your-english-level.html
+++ b/test-your-english-level.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="https://englishtests.online/favicon-180x180.png">
     <link rel="icon" type="image/png" sizes="192x192" href="https://englishtests.online/favicon-192x192.png">
 	<title>Test Your English Level | Free Online English Proficiency Assessment</title>
-	<meta name="description" content="Discover your current English level with our comprehensive assessment test. Get immediate results and recommendations for improvement based on the CEFR framework.">
+	<meta name="description" content="Discover your current English level with our comprehensive assessment test. Get immediate results based on the CEFR framework.">
 	<meta name="keywords" content="English tests online, Free English tests, English level test, English proficiency test, Test your English level, English language assessment, English grammar tests, English vocabulary tests, TOEFL English tests, IELTS English tests, SAT English tests, Online English exercises, CEFR English tests">
     	<meta name="author" content="englishtests.online">
     	<meta name="robots" content="index, follow">
