--- a/learn-english-effectively.html
+++ b/learn-english-effectively.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Effective English Learning | englishtests.online</title>
+    <title>Learn English Effectively | englishtests.online</title>
 	<link rel="icon" type="image/png" sizes="16x16" href="https://englishtests.online/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://englishtests.online/favicon-32x32.png">
     <link rel="icon" type="image/svg+xml" href="https://englishtests.online/favicon.svg">
