--- a/zh-CN/findword.html
+++ b/zh-CN/findword.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="FindWord - 每日单词拼图游戏 | englishtests.online">
     <meta property="og:description" content="挑战自己，玩FindWord每日单词拼图游戏！在144个随机字母中寻找英语单词，并与全球好友竞争。">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://englishtests.online/findword">
+    <meta property="og:url" content="https://englishtests.online/zh-CN/findword">
 
 	<link rel="alternate" hreflang="en" href="https://englishtests.online/findword" />
     <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/findword" />
@@ -48,7 +48,7 @@
     </script>
     
     <!-- Canonical URL to prevent duplicate content issues -->
-    <link rel="canonical" href="https://englishtests.online/findword">
+    <link rel="canonical" href="https://englishtests.online/zh-CN/findword">
     
     <!-- Additional SEO-friendly meta tags -->
     <meta name="robots" content="index, follow">
