--- a/vi/findword.html
+++ b/vi/findword.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="FindWord - Trò chơi ô chữ hằng ngày | englishtests.online">
     <meta property="og:description" content="Thử thách bản thân với FindWord, trò chơi ô chữ hằng ngày với 144 chữ cái ngẫu nhiên. Tìm từ tiếng Anh và so tài với bạn bè trên toàn thế giới.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://englishtests.online/findword">
+    <meta property="og:url" content="https://englishtests.online/vi/findword">
 
 	<link rel="alternate" hreflang="en" href="https://englishtests.online/findword" />
     <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/findword" />
@@ -48,7 +48,7 @@
     </script>
     
     <!-- Canonical URL to prevent duplicate content issues -->
-    <link rel="canonical" href="https://englishtests.online/findword">
+    <link rel="canonical" href="https://englishtests.online/vi/findword">
     
     <!-- Additional SEO-friendly meta tags -->
     <meta name="robots" content="index, follow">
