--- a/tr/findword.html
+++ b/tr/findword.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="FindWord - Günlük Kelime Bulmaca Oyunu | englishtests.online">
     <meta property="og:description" content="FindWord ile kendinizi sınayın! 144 rastgele harften oluşan günlük kelime bulmaca oyunu. İngilizce kelimeleri bulun ve dünya çapındaki arkadaşlarınızla yarışın.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://englishtests.online/findword">
+    <meta property="og:url" content="https://englishtests.online/tr/findword">
 
 	<link rel="alternate" hreflang="en" href="https://englishtests.online/findword" />
     <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/findword" />
@@ -48,7 +48,7 @@
     </script>
     
     <!-- Canonical URL to prevent duplicate content issues -->
-    <link rel="canonical" href="https://englishtests.online/findword">
+    <link rel="canonical" href="https://englishtests.online/tr/findword">
     
     <!-- Additional SEO-friendly meta tags -->
     <meta name="robots" content="index, follow">
